--- a/src/components/aboutme/Aboutme.css
+++ b/src/components/aboutme/Aboutme.css
@@ -114,6 +114,7 @@ hr {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   gap: 16px;
 }
 
@@ -123,6 +124,7 @@ hr {
   padding: 2vw 0;
   width: 300px;
   border-radius: 5px;
+  margin-top: 15px;
 }
 
 @media screen and (max-width: 768px) {
